Refactoring, cleaning HTML, fixing overflow of img

--- a/public/styles/findmyplant.css
+++ b/public/styles/findmyplant.css
@@ -25,8 +25,6 @@ body {
     margin-inline-start: 0;
     margin-inline-end: 0;
     margin-top: 0;
-
-
   }
 
 .grid {
@@ -40,6 +38,8 @@ body {
                          "fillerphoto-box fillerphoto-box"
                          "sidebar-1 article"
                          "footer footer";
+
+    min-height: 100%;
 }
 
 .banner {
@@ -48,7 +48,6 @@ body {
     grid-area: banner;
 
     background-color: #ADC178;
-    color: rgb(18, 214, 0);
 
     min-width: 100%;
     max-height:100%;
@@ -59,7 +58,6 @@ body {
 }
 
     .banner-body {
-        margin-inline-start: 0px;
     }
 
 
@@ -148,35 +146,36 @@ header {
                 border-color: #A98467;
             }
             
-            .fillerphoto-box {
-                grid-row: 3;
-                grid-column: 1 / -1;
-    grid-area: fillerphoto-box;
-    
-    box-sizing:border-box;
-    min-width: 100%;
-    max-height: 30%;
+            
+    .fillerphoto-box {
+        grid-row: 3;
+        grid-column: 1 / -1;
+        grid-area: fillerphoto-box;
+            
+        box-sizing:border-box;
 
-    border: solid black;
-    
-    justify-items: center;
-    align-content: stretch;
+        border: solid rgb(102, 105, 255);
+
+        /* min-width: 100%;
+        max-height: 30%;
+
+                
+        justify-items: center;
+        align-content: stretch; */
 }
 
-.photo-wrapper {
-    /* justify-content: center;
-    align-content: inherit; */
-}
+    /* .photo-wrapper {
+        justify-content: center;
+        align-content: inherit; 
+    } */
 
-.123 {
-    align-items: center;
-}
-
-
-.fillerphoto {
-    min-width: 100%;
-    max-height: 30%;
-}
+        .fillerphoto {
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            /* object-position:  */
+            object-position: center bottom;
+        }
 
 
 .button {
@@ -210,7 +209,12 @@ article {
     grid-column: 2 / 3;
     grid-area: article;
 
+    
+    
+}
 
+.search-results_box {
+border: 20px solid lightcoral;
 }
 
     .plant-item_container {
@@ -232,6 +236,7 @@ footer {
     grid-column: 1 / 3;
     grid-area: footer;
 
-    border: 3px solid brown;
+    border: 3px solid rgb(85, 226, 226);
+    color: lightgreen;
 }
 
